--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/common_spacing"
     tools:context=".MainActivity">
 
     <ImageView
@@ -25,8 +26,8 @@
         android:ellipsize="end"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/published"
-        app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintEnd_toStartOf="@id/menu"
+        app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="@sample/posts.json/data/author" />
@@ -37,10 +38,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_spacing"
         android:layout_marginEnd="@dimen/common_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/avatar"
         app:layout_constraintEnd_toStartOf="@id/menu"
-        app:layout_constraintTop_toBottomOf="@id/author"
-        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom_author"
         app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
     <ImageButton
@@ -51,19 +52,16 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_more_vert_24"   />
+        app:srcCompat="@drawable/ic_more_vert_24" />
 
     <TextView
         android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginEnd="@dimen/common_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_author"
         android:autoLink="web"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_author"
         tools:text="@sample/posts.json/data/content" />
 
     <androidx.constraintlayout.widget.Barrier
@@ -71,46 +69,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="avatar,published,menu"
-        />
+        app:constraint_referenced_ids="avatar,published,menu" />
 
     <ImageView
         android:id="@+id/like_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        app:srcCompat="@drawable/ic_favorite_border_24"/>
+        app:srcCompat="@drawable/ic_favorite_border_24" />
 
     <TextView
         android:id="@+id/like_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
         app:layout_constraintStart_toEndOf="@id/like_icon"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        tools:text="@sample/posts.json/data/like"/>
+        tools:text="@sample/posts.json/data/like" />
 
     <ImageView
         android:id="@+id/share_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintStart_toEndOf="@id/like_value"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        app:srcCompat="@drawable/ic_share_24"/>
+        app:srcCompat="@drawable/ic_share_24" />
 
     <TextView
         android:id="@+id/share_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/share_icon"
         app:layout_constraintStart_toEndOf="@id/share_icon"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        tools:text="@sample/posts.json/data/share"/>
+        tools:text="@sample/posts.json/data/share" />
 
     <ImageView
         android:id="@+id/view_icon"
@@ -119,14 +118,15 @@
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintEnd_toStartOf="@id/view_value"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        app:srcCompat="@drawable/ic_remove_red_eye_24"/>
+        app:srcCompat="@drawable/ic_remove_red_eye_24" />
 
     <TextView
         android:id="@+id/view_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/common_spacing"
         android:layout_marginTop="@dimen/common_spacing"
+        android:layout_marginEnd="@dimen/common_spacing"
+        app:layout_constraintBottom_toBottomOf="@+id/view_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
         tools:text="@sample/posts.json/data/view" />
@@ -136,7 +136,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="content"
-        />
+        app:constraint_referenced_ids="content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
