--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/common_spacing"
     android:clipToPadding="false"
     android:id="@+id/list"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:context=".MainActivity">
+    tools:listitem="@layout/card_post"
+    tools:context=".ui.MainActivity">
 </androidx.recyclerview.widget.RecyclerView>
