--- a/app/src/main/res/values-ru/colors.xml
+++ b/app/src/main/res/values-ru/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="icon">#776666</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#03A9F4</color>
 </resources>
