--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="icon">#776666</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#03A9F4</color>
 </resources>
