--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -44,15 +44,15 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/common_spacing"
-        android:background="@android:color/transparent"
+        style="@style/MenuStyle"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_more_vert_24" />
+        app:icon="@drawable/ic_more_vert_24" />
 
     <TextView
         android:id="@+id/content"
@@ -71,47 +71,27 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="avatar,published,menu" />
 
-    <ImageView
-        android:id="@+id/like_icon"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/like"
+        style="@style/LikeStyle"
+        app:icon="@drawable/ic_like"
+        android:checkable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        app:srcCompat="@drawable/ic_favorite_border_24" />
+        app:layout_constraintTop_toTopOf="@id/barrier_bottom_content" />
 
-    <TextView
-        android:id="@+id/like_value"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
-        app:layout_constraintStart_toEndOf="@id/like_icon"
+        style="@style/LikeStyle"
+        app:layout_constraintStart_toEndOf="@id/like"
         app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        tools:text="@sample/posts.json/data/like" />
+        app:icon="@drawable/ic_share_24" />
 
-    <ImageView
-        android:id="@+id/share_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintStart_toEndOf="@id/like_value"
-        app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        app:srcCompat="@drawable/ic_share_24" />
 
-    <TextView
-        android:id="@+id/share_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintBottom_toBottomOf="@+id/share_icon"
-        app:layout_constraintStart_toEndOf="@id/share_icon"
-        app:layout_constraintTop_toTopOf="@id/barrier_bottom_content"
-        tools:text="@sample/posts.json/data/share" />
-
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/view_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
