--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,16 +14,20 @@
         <!-- Customize your theme here. -->
     </style>
     
-    <style name="LikeStyle" parent="Widget.Material3.Button.TextButton.Icon">
+    <style name="LikeStyle" parent="Widget.MaterialComponents.Button.TextButton.Icon">
         <item name="iconTint">@color/like_button_tint</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">?attr/colorControlNormal</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <style name="MenuStyle" parent="Widget.Material3.Button.IconButton">
-        <item name="iconTint">@color/icon</item>
-        <item name="android:textColor">?attr/colorControlNormal</item>
+    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="iconTint">?attr/colorControlNormal</item>
+        <item name="iconPadding">0dp</item>
+        <item name="android:minWidth">24dp</item>
+        <item name="android:minHeight">24dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:gravity">center_horizontal</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
