--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -5,7 +5,7 @@
     android:padding="@dimen/common_spacing"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.FeedFragment">
 
     <ImageView
         android:id="@+id/avatar"
