--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/nav_host_fragment"
     android:layout_width="match_parent"
+    android:name= "androidx.navigation.fragment.NavHostFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:name="androidx.navigation.fragment.NavHostFragment"
-    app:defaultNavHost = "true"
+    app:defaultNavHost="true"
     app:navGraph="@navigation/nav_main"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+
+</fragment>
